apps/03-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-db
  namespace: core-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-db
  template:
    metadata:
      labels:
        app: task-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: task-db-svc
  namespace: core-apps
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: task-db
