apps/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-app-ingress
  namespace: core-apps
spec:
  ingressClassName: nginx
  rules:
  - host: app.cloujen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-task-svc
            port:
              number: 80
